syntax = "proto3";

option java_multiple_files = true;
option java_package = "taba.recruitment";

package taba.recruitment;

service RecruitmentService {
    // Unary
    rpc CreateJobPosting (JobRequest) returns (JobResponse);
    // Server streaming
    rpc GetAllCandidates (JobRequest) returns (stream CandidateResponse);
    // Client streaming
    rpc UploadResume (stream ResumeRequest) returns (ResumeResponse);
    // Bidirectional streaming - Real-time chat for the interview
    rpc RealTimeInterview (stream InterviewMessage) returns (stream InterviewMessage);
}

message JobRequest {
    string job_id = 1;
}

message JobResponse {
    string status = 1;
}

message CandidateResponse {
    string candidate_id = 1;
    string candidate_name = 2;
}

message ResumeRequest {
    string resume_file = 1;
}

message ResumeResponse {
    string result = 1;
}

// InterviewMessage for real-time chat
message InterviewMessage {
    string sender = 1;          // Candidate or Interviewer
    string message_content = 2; // Chat message content
}

